[tool.poetry]
name = "documentation-samples-python"
version = "0.1.0"
description = ""
authors = ["Alvin Januar <alvinjanuar@alvinjanuar.com>"]
readme = "README.md"
packages = [{ include = "**/*.py", from = "."  }]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.4.0"
lib = {path = "./src/lib", develop = true}
lxml = "^5.3.0"
playwright = "^1.46.0"
playwright-stealth = "^1.0.6"


[tool.poetry.dev-dependencies]
ruff = "^0.1.4"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff format ."}]
test = "pytest"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"